# waltti-apc-deployment

./: .gitignore  README.md  foo-secret.yaml  sops.md
argocd-test/base/: configmap.yaml  deployment.yaml  kustomization.yaml  networking.yaml  podpolicy.yaml
argocd-test/overlays/dev/: kustomization.yaml  secret.yaml
argocd-test/services/mqtt-pulsar-forwarder/: configmap.yaml  deployment.yaml  kustomization.yaml  networking.yaml  podpolicy.yaml
cloudamqp/: .terraform.lock.hcl  TERRAFORM.md  main.tf  provider.tf  terraform.tfvars-example  variables.tf
cloudamqp/environments/: README.md
cloudamqp/environments/dev/: .terraform.lock.hcl  backend.tf  logging.tf  provider.tf  variables.tf
cloudamqp/environments/staging/: .terraform.lock.hcl  backend.tf  logging.tf  main.tf  provider.tf  variables.tf
k8s/: README.md  decrypt-with-sops.sh  deploy-dev.sh  encrypt-with-sops.sh  kustomize-build.sh  lint.sh  run-kube-score.sh  run-kubeval.sh  run-polaris.sh  sops-age-recipients
k8s/base/: analytics-db-sa.yaml  analytics-db-schema-migrator.yaml  analytics-db-sink.yaml  client-only-network-policy.yaml  http-pulsar-poller-fi-jyvaskyla-vp.yaml  http-pulsar-poller-fi-kuopio-vp.yaml  journey-matcher.yaml  kustomization.yaml  max-unavailable-one-pdb.yaml  mqtt-deduplicator.yaml  mqtt-pulsar-forwarder.yaml
k8s/overlays/dev/: http-pulsar-poller-fi-jyvaskyla-vp-secret.enc.yaml  (+4 more)
manifests/http-pulsar-poller/: forp.yaml
modules/mqtt-user/: main.tf  provider.tf  variables.tf
mqtt/: README.md
secret_creator/: README.md  main.py  pyproject.toml
streamnative/: README.md
(+320 files in other folders)
