[tool.poetry]
name = "gcp-secret-creator"
version = "0.1.0"
description = ""
authors = ["Jyrki Ahpola <jahpola@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "secret_creator"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
jsonschema = "^4.17.3"
google-cloud-secret-manager = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
